<resources>
    <string name="app_name">SpaceX</string>
    <string name="action_settings">Settings</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_mission">Sort by mission</string>
    <string name="success_launches">Success Launches</string>
    <string name="failed_launches">Failed Launches</string>
    <string name="action_default">Default</string>

    <string name="flight_no">Flight No.</string>
    <string name="mission">Mission</string>
    <string name="year">Year</string>
    <string name="success">Success</string>

    <!-- Detail Fragment  -->
    <string name="flight_number">Flight Number : </string>
    <string name="mission_name">Mission Name : </string>
    <string name="mission_id">Mission ID : </string>
    <string name="launch_year">Launch Year : </string>
    <string name="launch_date_unix">Launch Date Unix : </string>
    <string name="launch_date_utc">Launch Date UTC : </string>
    <string name="launch_date_local">Launch Date Local : </string>
    <string name="tentative">Tentative : </string>
    <string name="tentative_max">Tentative Max Precision : </string>
    <string name="tbd">TBD : </string>
    <string name="launch_window">Launch Window : </string>
    <string name="rocket_details">Rocket Details </string>

    <string name="rocket_id">Rocket ID : </string>
    <string name="rocket_name">Rocket Name : </string>
    <string name="rocket_type">Rocket Type : </string>
    <string name="description">Description : </string>
    <string name="wikipedia">Wikipedia : </string>
    <string name="active">Active : </string>
    <string name="stages">Stages : </string>
    <string name="cost_per_launch">Cost Per Launch : </string>
    <string name="success_rate">Success Rate : </string>
    <string name="company">Company : </string>
    <string name="country">Country : </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
