<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.spacex.MainActivity">
    <item
        android:id="@+id/action_date"
        android:orderInCategory="100"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mission"
        android:orderInCategory="100"
        android:title="@string/sort_by_mission"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_success"
        android:orderInCategory="100"
        android:title="@string/success_launches"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_failed"
        android:orderInCategory="100"
        android:title="@string/failed_launches"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_default"
        android:orderInCategory="100"
        android:title="@string/action_default"
        app:showAsAction="never" />
</menu>
