<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_flight_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center"
            android:text="@string/flight_no"
            android:textSize="14sp"
            android:layout_gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_divide1"
            app:layout_constraintEnd_toStartOf="@+id/tv_divide1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_divide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:gravity="center"
            android:text="|"
            android:layout_gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/tv_mission"
            app:layout_constraintStart_toEndOf="@+id/tv_flight_no"
            app:layout_constraintTop_toTopOf="@+id/tv_mission" />

        <TextView
            android:id="@+id/tv_mission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mission"
            android:layout_weight=".25"
            android:textSize="14sp"
            android:layout_gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_divide2"
            app:layout_constraintEnd_toStartOf="@+id/tv_divide2"
            app:layout_constraintStart_toEndOf="@+id/tv_divide1" />

        <TextView
            android:id="@+id/tv_divide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="|"
            android:layout_gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/tv_year"
            app:layout_constraintStart_toEndOf="@+id/tv_mission"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year"
            android:layout_weight=".25"
            android:textSize="14sp"
            android:layout_gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_divide2"
            app:layout_constraintEnd_toStartOf="@+id/tv_divide3"
            app:layout_constraintStart_toEndOf="@+id/tv_divide2" />

        <TextView
            android:id="@+id/tv_divide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="|"
            android:layout_gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_year"
            app:layout_constraintEnd_toStartOf="@+id/lvLaunchList"
            app:layout_constraintStart_toEndOf="@+id/tv_year" />

        <TextView
            android:id="@+id/tv_launch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:text="@string/success"
            android:layout_weight=".25"
            android:textSize="14sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_divide3"
            app:layout_constraintTop_toTopOf="@+id/lvLaunchList" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvLaunchList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>
